--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.4.7",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "git": "^0.1.5",
     "http-errors": "~1.6.3",
     "mongoose": "^8.9.5",
     "morgan": "~1.9.1"
